# fullgraph-alchemist-backend

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  commands.py  config.py  create_app.py  fixtures.py  manage.py  models.py  mypy.ini  package-lock.json  package.json  pyproject.toml  tox.ini
api/: book.py
cloudformation/serverless_functions/: app.yml  database.yml
db/: __init__.py  fixtures.py
env/local/: bin  include  lib
fga/: commands.py  config.py  create_app.py  flaskapp.py  schema.py  utils.py
fga/db/: __init__.py  fixtures.py
fga/gql/: __init__.py  fields.py  unions.py
fga/gql/auth/: __init__.py  fields.py
fga/gql/auth/mutations/: __init__.py
fga/gql/auth/schema/: __init__.py
fga/gql/item/: __init__.py
fga/gql/item/mutations/: __init__.py
fga/gql/item/queries/: __init__.py
fga/gql/item/schema/: __init__.py
fga/gql/user/: __init__.py
fga/gql/user/mutations/: __init__.py
fga/gql/user/queries/: __init__.py
fga/gql/user/schema/: __init__.py
fga/model/: __init__.py  item.py  user.py
graphene_boilerplate/: __init__.py  app.py  config.py  models.py  schema.py  user_schema.py  utils.py
graphene_boilerplate/db/: fixtures.py
graphene_boilerplate/gql/: __init__.py  fields.py  unions.py
graphene_boilerplate/gql/auth/: __init__.py  unions.py
graphene_boilerplate/gql/item/: __init__.py  fields.py
graphene_boilerplate/gql/user/: __init__.py  fields.py
graphene_boilerplate/model/: __init__.py  item.py  user.py
graphene_boilerplate/models/: __init__.py  item.py  user.py
migrations/: env.py
migrations/versions/: 0383e0084534_initial_migration.py  a5bd99eb0195_.py  a5bd99eb0195_user_model.py  b64b2dcb690f_initial.py  c5c046808450_.py  c5c046808450_initial.py  ec2b59a1b24e_initial_migration.py
model/: book.py
schema/: schema.py
tests/: conftest.py  test_graphql.py
(+12 files in other folders)
