[tool.poetry]
name = "graphene_alc"
version = "0.1.0"
description = "Human transmutations are forbidden. Btw GraphQL"
authors = ["Kostik"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
flask_sqlalchemy = "^2.4.4"
flask_migrate = "^2.5.3"
psycopg2-binary = "^2.8.5"
flask_script = "^2.0.6"
factory-boy = "^2.12.0"
JetKit-Flask = "^9.0.1"
graphene = "^2.1.8"
graphene_sqlalchemy = "^2.3.0"
flask_graphql = "^2.0.1"

[tool.poetry.dev-dependencies]
faker = "^4.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
